codex-rs/tui/src/chatwidget/tests/snapshots/codex_tui__chatwidget__tests__question_turn_end_tests__question_turn_end_large_draft.snap
---
source: tui/src/chatwidget/tests/question_turn_end_tests.rs
expression: "normalize_snapshot_paths(render_bottom_popup(&chat, 80))"
---
 Elpis · model gpt-5.6-sol default · location /tmp/project
┌──────────────────────────────────────────────┐│CONTEXT LEDGER  context not
› $tool existing draft                         ││measured · ≈0 source estimates
│ Over-ear                                     ││Tab controls · Alt+C hide ·
│ Under 250                                    ││Ctrl+click open file
│ [Pasted Content 2399 chars]                  ││
└──────────────────────────────────────────────┘│SMART PRUNE          [···] SYNC
        100% context left · Tab Context Ledger  │Reading current thread state
                                                │Syncing… · /smart-prune on|off
                                                │sets an explicit state
                                                │
                                                │SUBAGENTS             [━━━●] ON
                                                │May delegate to other agents
                                                │
                                                │CONTEXT WINDOW  usage
                                                │unavailable
                                                │Context measurement unavailable
                                                │until the first request
                                                │snapshot
                                                │
                                                │No portable context is
                                                │available.
